<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
         <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    -->

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/original" />

        <RadioButton
            android:id="@+id/radio_erosion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erosion" />

        <RadioButton
            android:id="@+id/radio_dilation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dilation" />
    </RadioGroup>

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />
    
    <ImageView
        android:id="@+id/image3"
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_segments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>